--- a/anfisa_for_friends/templates/includes/header.html
+++ b/anfisa_for_friends/templates/includes/header.html
@@ -37,7 +37,7 @@
           </li>
         </ul>
       </div> 
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="/">
         <img src="{% static 'img/logo.png' %}" height="50" class="d-inline-block align-top" alt="">            
       </a>         
     </div>
